tests/baselines/reference/TypeArgumentList1.errors.txt
TypeArgumentList1.ts(1,1): error TS2304: Cannot find name 'Foo'.
TypeArgumentList1.ts(1,1): error TS2695: Left side of comma operator is unused and has no side effects.
TypeArgumentList1.ts(1,1): error TS2695: Left side of comma operator is unused and has no side effects.
TypeArgumentList1.ts(1,5): error TS2304: Cannot find name 'A'.
TypeArgumentList1.ts(1,7): error TS2304: Cannot find name 'B'.
TypeArgumentList1.ts(1,9): error TS1127: Invalid character.
TypeArgumentList1.ts(1,11): error TS2304: Cannot find name 'C'.
TypeArgumentList1.ts(1,14): error TS2695: Left side of comma operator is unused and has no side effects.
TypeArgumentList1.ts(1,14): error TS2695: Left side of comma operator is unused and has no side effects.


==== TypeArgumentList1.ts (9 errors) ====
    Foo<A,B,\ C>(4, 5, 6);
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
    ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    ~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
        ~
!!! error TS2304: Cannot find name 'A'.
          ~
!!! error TS2304: Cannot find name 'B'.
            
!!! error TS1127: Invalid character.
              ~
!!! error TS2304: Cannot find name 'C'.
                 ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                 ~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.